--- a/templates/map.html
+++ b/templates/map.html
@@ -8,7 +8,8 @@
 {
   "imports": {
     "leaflet": "https://unpkg.com/leaflet@2.0.0-alpha.1/dist/leaflet.js",
-    "leaflet-extra-markers": "https://unpkg.com/leaflet-extra-markers@2.0.1/src/index.js"
+    "leaflet-extra-markers": "https://unpkg.com/leaflet-extra-markers@2.0.1/src/index.js",
+    "luxon": "https://cdn.jsdelivr.net/npm/luxon@3.7.2/+esm"
   }
 }
 </script>
