--- a/templates/base-map.html
+++ b/templates/base-map.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content-variant %}
 
-<nav id="header" class="navbar navbar-expand-lg px-3 px-sm-5 bg-body-tertiary">
+<nav id="header" class="navbar navbar-expand-lg px-3 px-sm-5 bg-body-tertiary border-bottom">
     <a class="navbar-brand" href="/">Youth Map</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
