--- a/templates/base-std.html
+++ b/templates/base-std.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content-variant %}
 
-<nav id="header" class="navbar navbar-expand-lg mb-5 px-3 px-sm-5 bg-body-tertiary">
+<nav id="header" class="navbar navbar-expand-lg mb-5 px-3 px-sm-5 bg-body-tertiary border-bottom">
     <a class="navbar-brand" href="/">Youth Map</a>
 </nav>
 <main>
